added support for v3 tor